# tigris

./: Makefile  README.md
project/launcher/: package-lock.json  package.json
project/launcher/src-tauri/: Cargo.toml  tauri.conf.json
project/launcher/src-tauri/capabilities/: default.json  desktop.json
project/launcher/src-tauri/icons/: icon.icns
project/launcher/src-tauri/src/: features.rs  lib.rs  main.rs
project/launcher/src-tauri/src/features/: actions.rs  app.rs  mod.rs  paths.rs  window.rs
project/launcher/src-tauri/src/features/actions/: mod.rs
project/launcher/src-tauri/src/features/dirs/: mod.rs
project/launcher/src-tauri/src/features/form/: mod.rs
project/launcher/src-tauri/src/features/indexing/: mod.rs
project/launcher/src-tauri/src/features/search/: mod.rs
project/launcher/src-tauri/src/features/settings/: mod.rs
project/launcher/src-tauri/src/features/tray/: mod.rs
project/launcher/src/lib/components/buttons/: BackButton.svelte  DangerButton.svelte  OutlineButton.svelte  PrimaryButton.svelte  TextButton.svelte
project/launcher/src/lib/components/components/: HeaderTitle.svelte  HorizontalDivider.svelte
project/launcher/src/lib/components/form/: ConfirmationDialog.svelte  FileSystemForm.svelte  SelectForm.svelte  SliderForm.svelte  SwitchForm.svelte  TextAreaForm.svelte  TextForm.svelte
project/launcher/src/lib/components/form/helper-classes/: SelectValue.ts
project/launcher/src/lib/components/inputs/: ClearInput.svelte  ColorInput.svelte
project/launcher/src/lib/components/layouts/: MainLayout.svelte  MainLayoutVM.ts
project/launcher/src/lib/features/: Apps.ts  Extensions.ts  ResultAction.ts  Results.ts  Routes.ts  Settings.ts  Store.ts  Theming.ts
project/launcher/src/lib/repositories/: SettingsRepository.ts
project/launcher/src/lib/utils/: TextFormatting.ts
project/launcher/src/routes/: +page.svelte  MainVM.ts
project/launcher/src/routes/form/: +page.svelte  FormVM.ts
project/launcher/src/routes/settings/: +page.svelte  SettingsVM.ts
project/launcher/src/routes/settings/tabs/about/: AboutPage.svelte  AboutPageVM.ts
project/launcher/src/routes/settings/tabs/extensions/: ExtensionsPage.svelte  ExtensionsPageVM.ts
project/resources/: Makefile  README  tigris-launcher.desktop
project/show/: Cargo.toml
project/show/src/: main.rs
project/tray/src/: index.html
project/tray/src-tauri/: Cargo.toml  tauri.conf.json
project/tray/src-tauri/icons/: icon.icns
project/tray/src-tauri/src/: lib.rs  main.rs
project/tray/src-tauri/src/features/: mod.rs
project/tray/src-tauri/src/features/dirs/: mod.rs
project/tray/src-tauri/src/features/indexing/: mod.rs
project/tray/src-tauri/src/features/tray/: mod.rs
tigris-launcher-0.1.0-linux-x86_64/: tigris-show
(+22 files in other folders)
