[package]
name = "tigris-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tigris_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tigris-core = { path = "/home/lighttigerxiv/dev/whiskers-apps/pc/tigris-core", features = [
    "launcher",
] }

sniffer-rs = "1.1.2"
tauri-plugin-clipboard-manager = "2.2.2"
open = "5.3.2"
tokio = { version = "1.44.2", features = ["full"] }
tauri-plugin-dialog = "2"
image = "0.25.6"
bincode = "1.3.3"
tauri-plugin-fs = "2"
git2 = "0.20.1"
freedesktop-desktop-entry = "0.7.11"
tux-icons = "0.4.3"
dirs = "6.0.0"
postcard = { version = "1.1.1", features = ["alloc"] }
notify = "8.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
